<?xml version="1.0"?>
<package format="2">
  <name>cuda_swarm</name>
  <version>0.0.0</version>
  <description>The cuda_swarm package</description>

  <maintainer email="ingramds@appstate.edu">Daniel Ingram</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cuda</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>cuda</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>cuda</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
